# codex-workspaces

./: .gitignore  LICENSE  README.es.md  README.md  codex-setup.sh  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release-linux.yml
public/: manifest.webmanifest  workspaces.json
src/: App.tsx  main.tsx  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: WorkspaceSelect.tsx
src/components/feedback/: StatusBar.tsx
src/components/icons/: TerminalIcon.tsx
src/components/layout/: GlassPanel.tsx
src/components/logo/: CodexLogo.tsx
src/components/ui/: Button.tsx  Field.tsx  LanguageSwitcher.tsx
src/hooks/: useFormState.ts  useStatus.ts
src/i18n/: index.ts
src/lib/: command.ts  tauri.ts
src/sections/: CommandPreview.tsx  SetupForm.tsx
