[package]
name = "unefa_codex"
version = "3.0.0"
edition = "2021"
description = "UNEFA Codex desktop companion built with Tauri"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1.5", features = ["custom-protocol", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
